# voxel-rust

./: .gitignore  Cargo.toml  README.md
assets/: biomes.toml  config.toml
assets/textures/: textures.toml
src/: camera.rs  config.rs  embedded_assets.rs  fluid.rs  main.rs  raycast.rs  renderer.rs  selection.wgsl  shader.wgsl  shadow.wgsl  sky.wgsl  texture.rs  voxel.rs  water.wgsl  worldgen.rs
